--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "pufflings",
   "version": "0.1.0",
   "private": true,
+"prisma": {
+  "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+},
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -16,7 +19,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.15.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
@@ -24,9 +27,7 @@
     "postcss": "^8",
     "prisma": "^5.18.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  },
-  "prisma": {
-  "seed": "ts-node prisma/seed.ts"
-}
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
+  }
 }
