--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "^5.18.0",
     "install": "^0.13.0",
     "next": "14.2.5",
+    "next-intl": "^3.17.6",
     "npm": "^10.8.2",
     "react": "^18",
     "react-dom": "^18"
