--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@prisma/client": "^5.18.0",
+    "hugeicons-react": "^0.3.0",
     "install": "^0.13.0",
     "next": "14.2.5",
     "next-intl": "^3.17.6",
     "npm": "^10.8.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-favicon": "^2.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.15.0",
