--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@nextui-org/dropdown": "^2.1.31",
+    "@nextui-org/system": "^2.2.6",
+    "@nextui-org/theme": "^2.2.11",
     "@prisma/client": "^5.18.0",
+    "framer-motion": "^11.11.11",
     "hugeicons-react": "^0.3.0",
     "install": "^0.13.0",
     "next": "14.2.5",
@@ -27,6 +31,7 @@
     "npm": "^10.8.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropdown-select": "^4.11.3",
     "react-favicon": "^2.0.7"
   },
   "devDependencies": {
