fixing linting errors for deployment

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 # Local DB
-DATABASE_URL=postgresql://local_dev:mysecretpassword@localhost:5432/pufflings
-DIRECT_URL=${DATABASE_URL}
+# DATABASE_URL=postgresql://local_dev:mysecretpassword@localhost:5432/pufflings
+# DIRECT_URL=${DATABASE_URL}
+
+DATABASE_URL="postgresql://postgres.cmnnxcjcumzkjbjjqczn:Ic0DQqEBDxb9kg5d@aws-0-us-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+DIRECT_URL="postgresql://postgres.cmnnxcjcumzkjbjjqczn:Ic0DQqEBDxb9kg5d@aws-0-us-west-1.pooler.supabase.com:5432/postgres"
 
 # Clerk Keys
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c2luY2VyZS1zdW5iZWFtLTg2LmNsZXJrLmFjY291bnRzLmRldiQ
