--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@
 # DATABASE_URL=postgresql://local_dev:mysecretpassword@localhost:5432/pufflings
 # DIRECT_URL=${DATABASE_URL}
 
+# Production Database
 DATABASE_URL="postgresql://postgres.cmnnxcjcumzkjbjjqczn:Ic0DQqEBDxb9kg5d@aws-0-us-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
 DIRECT_URL="postgresql://postgres.cmnnxcjcumzkjbjjqczn:Ic0DQqEBDxb9kg5d@aws-0-us-west-1.pooler.supabase.com:5432/postgres"
 
