--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@heroicons/react": "^2.2.0",
     "@nextui-org/dropdown": "^2.1.31",
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
