--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nextui-org/dropdown": "^2.1.31",
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
+    "@nivo/core": "^0.88.0",
+    "@nivo/line": "^0.88.0",
     "@prisma/client": "^5.18.0",
     "framer-motion": "^11.11.11",
     "hugeicons-react": "^0.3.0",
