--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-favicon": "^2.0.7"
   },
   "devDependencies": {
+    "@eslint/js": "^9.16.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
@@ -47,8 +48,10 @@
     "@types/node": "^20.15.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.5",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.13.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-mock-extended": "^4.0.0-beta1",
@@ -56,6 +59,7 @@
     "prisma": "^5.18.0",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.17.0"
   }
 }
