--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
     "@clerk/backend": "^1.13.2",
@@ -28,6 +30,7 @@
     "@nivo/core": "^0.88.0",
     "@nivo/line": "^0.88.0",
     "@prisma/client": "^5.18.0",
+    "eslint-config-prettier": "^9.1.0",
     "framer-motion": "^11.11.11",
     "hugeicons-react": "^0.3.0",
     "install": "^0.13.0",
@@ -56,6 +59,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-mock-extended": "^4.0.0-beta1",
     "postcss": "^8",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "prisma": "^5.18.0",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
